--- a/src/styles/contactForm.css
+++ b/src/styles/contactForm.css
@@ -10,15 +10,19 @@
   /* width: 200px; */
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  /* gap: 15px; */
   justify-items: center;
   align-items: center;
   padding: 30px 40px 40px 40px;
 }
 
+.formm > *:not(:first-child) {
+  margin: 8px 0;
+}
+
 @media only screen and (max-width: 600px) {
   .formm {
-    background-color: #add8e6;
+    /* background-color: #add8e6; */
     width: 22rem;
     margin-right: auto;
   }
