--- a/src/styles/spinner.css
+++ b/src/styles/spinner.css
@@ -5,6 +5,3 @@
   position: absolute;
   z-index: 1;
 }
-
-.spinner-container-new {
-}
